src/styles/_index.css
@import url('./header.css');
@import url('./intro.css');
@import url('./contact.css');
@import url('./projects.css');

:root {
	--color-image-background: linear-gradient(45deg, rgba(69, 142, 232, 0.6), rgba(69, 142, 232, 0.2));
}

:root[data-theme='light'] {
	color-scheme: light only;
	--color-text: #3a3b3c;
	--color-accent: #458ee8;
	--color-shadow: #4d709922;
	--color-underline: #4d709922;
	--color-background: #f6fbfd;
	--color-card-background: #fffc;
	--color-more-background: #f3f8fd;
}

:root[data-theme='dark'] {
	color-scheme: dark only;
	--color-text: #ddd;
	--color-accent: #458ee8;
	--color-shadow: #000;
	--color-underline: #666;
	--color-background: #000;
	--color-card-background: #111;
	--color-more-background: #222;
}

@media (prefers-color-scheme: dark) {
	:root {
		color-scheme: dark only;
		--color-text: #ddd;
		--color-accent: #458ee8;
		--color-shadow: #000;
		--color-underline: #666;
		--color-background: #000;
		--color-card-background: #111;
		--color-more-background: #222;
	}
}

@media not (prefers-color-scheme: dark) {
	:root {
		color-scheme: light only;
		--color-text: #3a3b3c;
		--color-accent: #458ee8;
		--color-shadow: #4d709922;
		--color-underline: #4d709922;
		--color-background: #f6fbfd;
		--color-card-background: #fffc;
		--color-more-background: #f3f8fd;
	}
}

html {
	background-color: var(--color-background);
}

body {
	position: relative;
	max-width: 50em;
	min-width: 330px;
	color: var(--color-text);
	margin: 5vh auto 10vh;
	font-weight: 500;
	font-size: 18px;
	font-family: 'DM Sans', -apple-system, -system-ui, sans-serif;
	line-height: 1.5em;
}

* {
	box-sizing: border-box;
}

a {
	text-decoration: none;
	color: inherit;
}

picture img {
	color: transparent;
}

a,
label,
button {
	padding: 0;
	color: inherit;
	font-weight: inherit;
	font-size: inherit;
	font-family: inherit;
	border: none;
	border-bottom: 0.14em solid var(--color-underline);
	background-color: transparent;
	cursor: pointer;
}

label:focus-visible,
button:focus-visible,
a:focus-visible {
	border-color: transparent;
	outline: 3px solid var(--color-accent);
}

ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

svg {
	display: block;
	width: 16px;
	height: 16px;
	fill: var(--color-text);
	outline: none;
}

#backtotop {
	text-align: center;
}

@media (max-width: 1200px) or (max-height: 901px) {
	#projects,
	body {
		font-size: 17px;
	}
}

@media (max-width: 500px) {
	#projects,
	body {
		font-size: 16px;
	}
}

